[package]
authors = ["Vladimir Makaev <vmakaev@gmail.com>"]
build = "build/build.rs"
edition = "2018"
name = "coding-game-spring-2021"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[build-dependencies]
bundle-rs = {git = "https://github.com/VladimirMakaev/bundle-rs.git", branch = "main"}
